# vilicus

./: .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  mise.toml  pyproject.toml
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml
src/antistes/gates/: click.py
src/antistes/inits/: scripts.py
src/antistes/links/: subprocess.py  tmux.py
src/antistes/mills/: server.py
src/antistes/pacts/: protocols.py
src/vekna/conf/: tmux.conf
src/vekna/gates/cli/click/: command.py
src/vekna/inits/: cli.py
src/vekna/links/: socket_client.py  socket_server.py  tmux.py
src/vekna/mills/: bus.py  handlers.py  notify.py  server.py
src/vekna/pacts/: bus.py  notify.py  server.py  socket.py  tmux.py
src/vekna/specs/: __init__.py  constants.py
tests/integration/: test_command.py  test_daemon_end_to_end.py  test_notify_flow.py
tests/unit/: test_constants.py  test_event_bus.py  test_handlers.py  test_notify_client_mill.py  test_server_mill.py  test_socket_client.py  test_socket_server.py  test_tmux_link.py
