[project]
name = "antistes"
version = "0.0.2"
description = "Coding agent overseer"
authors = [{ name = "Radosław Ganczarek", email = "radoslaw@ganczarek.in" }]
license = { text = "BSD-3-Clause license" }
readme = "README.md"
requires-python = ">=3.14,<4"
dependencies = ["libtmux (>=0.55.0,<0.56.0)", "click (>=8.3.2,<9.0.0)"]

[project.scripts]
antistes = 'antistes.inits.scripts:run'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.3.1,<27.0.0)",
    "codespell (>=2.4.2,<3.0.0)",
    "deptry (>=0.25.1,<0.26.0)",
    "import-linter (>=2.11,<3.0)",
    "mypy (>=1.20.0,<2.0.0)",
    "pylint (>=4.0.5,<5.0.0)",
    "ruff (>=0.15.9,<0.16.0)",
    "vulture (>=2.16,<3.0)",
    "pip-audit (>=2.10.0,<3.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "diff-cover (>=10.2.0,<11.0.0)",
]

# BLACK

[tool.black]
line-length = 88
preview = true
skip-magic-trailing-comma = true
target-version = ['py314']

# DEPTRY

[tool.deptry]
known_first_party = ["antistes"]

# IMPORT LINTER

[tool.importlinter]
include_external_packages = "True"
root_package = "antistes"

# Explanation <source_modules> can't import <forbidden_modules>

[[tool.importlinter.contracts]]
name = "gates"
type = "forbidden"
source_modules = ["antistes.gates"]
forbidden_modules = [
    "antistes.links",
    "antistes.inits",
    "antistes.specs",
    "antistes.edges",
]


[[tool.importlinter.contracts]]
name = "links"
type = "forbidden"
source_modules = ["antistes.links"]
forbidden_modules = [
    "antistes.gates",
    "antistes.inits",
    "antistes.specs",
    "antistes.edges",
]


[[tool.importlinter.contracts]]
name = "inits"
type = "forbidden"
source_modules = ["antistes.inits"]
forbidden_modules = ["antistes.edges"]


[[tool.importlinter.contracts]]
name = "mills"
type = "forbidden"
source_modules = ["antistes.mills"]
forbidden_modules = [
    "antistes.gates",
    "antistes.links",
    "antistes.inits",
    "antistes.specs",
    "antistes.edges",
    "django",
]


[[tool.importlinter.contracts]]
name = "pacts"
type = "forbidden"
source_modules = ["antistes.pacts"]
forbidden_modules = [
    "antistes.gates",
    "antistes.links",
    "antistes.inits",
    "antistes.mills",
    "antistes.specs",
    "antistes.edges",
    "django",
]


[[tool.importlinter.contracts]]
name = "specs"
type = "forbidden"
source_modules = ["antistes.specs"]
forbidden_modules = [
    "antistes.gates",
    "antistes.links",
    "antistes.inits",
    "antistes.mills",
    "antistes.edges",
    "django",
]


[[tool.importlinter.contracts]]
name = "edges"
type = "forbidden"
source_modules = ["antistes.edges"]
forbidden_modules = [
    "antistes.gates",
    "antistes.links",
    "antistes.inits",
    "antistes.mills",
    "antistes.pacts",
    "antistes.specs",
]

# MYPY

[tool.mypy]
check_untyped_defs = true
color_output = true
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_expr = true
disallow_any_generics = true
disallow_any_unimported = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
exclude = []
explicit_package_bases = true
extra_checks = true
implicit_reexport = true
mypy_path = "src"
plugins = []
pretty = true
python_version = "3.14"
strict = true
strict_equality = true
strict_equality_for_none = true
warn_incomplete_stub = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

# RUFF

[tool.ruff]
fix = false
line-length = 88
output-format = 'concise'
preview = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "CPY", # Missing copyright notice at top of file
    "D1",  # Missing docstring
]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = [
    "ANN", # flake8-annotations
    "S",
]

# VULTURE

[tool.vulture]
exclude = []
min_confidence = 61

# COVERAGE

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["src/antistes/edges/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_also = ["if TYPE_CHECKING:", "# pragma: no cover"]
precision = 2
